--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,10 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
-
+*.png
+*.jpg
+*.npz
+*.pt
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
